--- a/application.yaml
+++ b/application.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
 
   source:
-    repoURL: https://github.com/Gruxme/abiari
+    repoURL: https://github.com/Gruxme/abiari.git
     targetRevision: HEAD
     path: dev
   destination: 
